<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.14">
  <DUT Name="ST_ToolResult" Id="{cf402f15-32e9-4ac0-ade4-be97799fa69c}">
    <Declaration><![CDATA[TYPE ST_ToolResult :
STRUCT
	nToolNumber : USINT;			//Camera Tool/jOB number, 00=Position Adjustment tool 01..64(standard mode)/01..08 (sorting mode)
	sToolStatus :STRING(2);			//OK, NG, --:Status not possible
	sMatchingRate :STRING(7);		//7 characters Matching rate	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>